<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/publish_menu_item"
        android:title="@string/publish_menu_item"
        android:contentDescription="@string/content_description_publish_menu_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/share_via_email_menu_item"
        android:title="@string/share_via_email_menu_item"
        android:contentDescription="@string/content_description_share_via_email_menu_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_menu_item"
        android:title="@string/delete_menu_item"
        android:contentDescription="@string/content_description_delete_menu_item"
        app:showAsAction="never" />
</menu>