<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="16dp">
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_title_label" />
            <EditText
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blog_title_edit_text"
                android:hint="@string/title_prompt" />
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_body_label" />
            <EditText
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blog_body_edit_text"
                android:hint="@string/contents_prompt"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/blog_select_photo_button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/blog_select_photo_button_text"/>
                <ImageView
                    android:id="@+id/blog_image_view"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:cropToPadding="true"
                    android:background="@android:color/darker_gray"
                    android:scaleType="centerInside" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>